--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -7,5 +7,8 @@ spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
 
-spring.grpc.server.port = 9002
 spring.grpc.server.reflection.enabled=true
+spring.grpc.server.port=9002
+
+spring.grpc.client.channels.product-catalog-service.address=localhost:9001
+spring.grpc.client.channels.product-catalog-service.negotiation-type=plaintext
