--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
-grpc:
-  client:
-    productCatalogService:
-      address: "localhost:9090"
-      negotiation-type: plaintext
+#grpc:
+#  client:
+#    productCatalogService:
+#      address: "localhost:9001"
+#      negotiation-type: plaintext
