--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -82,6 +82,10 @@
             <artifactId>spring-grpc-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.grpc</groupId>
+            <artifactId>spring-grpc-core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
