--- a/product-catalog-service/docker-compose.yml
+++ b/product-catalog-service/docker-compose.yml
@@ -1,10 +1,10 @@
 services:
   db:
     image: postgres:latest
-    container_name: order-db
+    container_name: product-catalog-db
     environment:
         - POSTGRES_USER=admin
         - POSTGRES_PASSWORD=admin
-        - POSTGRES_DB=order
+        - POSTGRES_DB=product-catalog
     ports:
         - "5430:5432"
