--- a/product-catalog-service/src/main/resources/application.properties
+++ b/product-catalog-service/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=admin
 spring.datasource.password=admin
 
 spring.jpa.hibernate.ddl-auto=update
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 
 spring.grpc.server.port = 9001
 spring.grpc.server.reflection.enabled=true
