Inventory Service and Kafka setup

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.grpc.server.port=9002
 
 spring.grpc.client.channels.product-catalog-service.address=localhost:9001
 spring.grpc.client.channels.product-catalog-service.negotiation-type=plaintext
+
+spring.grpc.client.channels.inventory-service.address=localhost:9003
+spring.grpc.client.channels.inventory-service.negotiation-type=plaintext
