--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=inventory-service
+
+spring.datasource.url=jdbc:postgres://localhost:5433/inventory
+spring.datasource.username=admin
+spring.datasource.password=admin
+
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
+
+spring.grpc.server.port=9003
+spring.grpc.server.reflection.enabled=true
