--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=inventory-service
 
-spring.datasource.url=jdbc:postgres://localhost:5433/inventory
+spring.datasource.url=jdbc:postgresql://localhost:5433/inventory
 spring.datasource.username=admin
 spring.datasource.password=admin
 
